<resources>
    <string name="app_name">DirectMed</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Search_title">Search</string>
    <string name="History_title">History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medicamentActivity_Nume">Denumire:</string>
    <string name="medicamentActivity_tip">Categorie:</string>
    <string name="medicamentActivity_pret">Pret:</string>
    <string name="medicamentActivity_farmacie">Farmacie:</string>
    <string name="button_reset">Reset</string>
    <string name="updateStr">Update</string>
    <string name="AddCartButton">Add to Cart</string>
    <string name="Cart">Cart</string>
    <string name="title_activity_maps">Map</string>
    <string name="routeFind">Find Route</string>
    <string name="google_maps_key">AIzaSyDt4IhKiNRziVzTfjHPxa-dDEfWrS4ITMY</string>
    <string name="MedSearchTitle">Introduceti medicamentul dorit:</string>
    <string name="PriceText">Price:</string>
    <string name="FarmacieText">Pharmacy:</string>
</resources>
